Minor bugfixes, attepting to fix annoying scroll issue on mobile browsers.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -30,6 +30,10 @@ body {
 #goblin-foot {
   width: 100%;
   height: 10vh;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
 }
 
 #goblin-modal {
